[project]
name = "Algorithms and Data Structures with Python"
version = "0.1"
description = "A demo library with various algoriths and data structures with Python"
authors = [{ name = "Aleksandar Karastoyanov" }]
readme = "README"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["data_structures"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"